# foundrix_erp

./: .env.example  alembic.ini  context.md  docker-compose.yml  prmpt.txt  project-flow.md  pyproject.toml
.claude/: settings.json  settings.local.json
migrations/: env.py
src/api/: dependencies.py  main.py  system.py
src/core/: config.py
src/core/auth/: __init__.py  audit.py  models.py  password.py  permissions.py  router.py  schemas.py  service.py
src/core/cache/: __init__.py  backend.py
src/core/currency/: __init__.py  models.py  schemas.py  service.py
src/core/data_exchange/: __init__.py  exporter.py  importer.py
src/core/database/: __init__.py  base.py  session.py  tenant_session.py
src/core/errors/: __init__.py  exceptions.py  handlers.py
src/core/events/: __init__.py  bus.py
src/core/logging/: __init__.py  middleware.py  setup.py
src/core/notifications/: __init__.py  models.py  service.py
src/core/pagination/: __init__.py  paginator.py
src/core/registry/: __init__.py  module_base.py  registry.py  registry_service.py
src/core/repository/: __init__.py  base.py
src/core/seed/: __init__.py  runner.py
src/core/service/: __init__.py  base.py
src/core/storage/: __init__.py  base.py  local.py
src/core/tasks/: __init__.py  queue.py  worker.py
src/core/tenant/: __init__.py  middleware.py  models.py  router.py  schemas.py  service.py
src/core/webhooks/: __init__.py  models.py  service.py
src/modules/accounting/: __manifest__.py  router.py
tests/: conftest.py
tests/core/: test_events.py  test_health.py  test_pagination.py
(+166 files in other folders)
